# realtime_humanlike_planning

./: Dockerfile  README.md  cleanup_gazebo.sh  docker_build.sh  docker_run.sh  kill_gazebo.sh
catkin_ws/: .gitignore
catkin_ws/src/iiwa-impedance-control-docker/: Dockerfile  requirements.txt
catkin_ws/src/iiwa-impedance-control-docker/catkin_ws/src/iiwa_impedance_control/: .gitignore  CMakeLists.txt  LICENSE.md  iiwa_impedance_controller.xml  package.xml
catkin_ws/src/iiwa-impedance-control-docker/catkin_ws/src/iiwa_impedance_control/action/: JointTrajectoryExecution.action
catkin_ws/src/iiwa-impedance-control-docker/catkin_ws/src/iiwa_impedance_control/include/iiwa_impedance_control/: joint_impedance_controller.h
catkin_ws/src/iiwa-impedance-control-docker/catkin_ws/src/iiwa_impedance_control/launch/: iiwa_impedance_control.launch
catkin_ws/src/iiwa-impedance-control-docker/catkin_ws/src/iiwa_impedance_control/res/: tf.rviz
catkin_ws/src/iiwa-impedance-control-docker/catkin_ws/src/iiwa_impedance_control/src/: cartesian_impedance_controller.cpp
catkin_ws/src/iiwa_impedance_control/: README.md
catkin_ws/src/iiwa_impedance_control/action/: CartesianTrajectoryExecution.action
catkin_ws/src/iiwa_impedance_control/config/: cartesian_impedance_param.cfg  iiwa_impedance_control.yaml  joint_impedance_param.cfg
catkin_ws/src/iiwa_impedance_control/include/iiwa_impedance_control/: cartesian_impedance_controller.h
catkin_ws/src/iiwa_impedance_control/res/: tf.rviz
catkin_ws/src/iiwa_impedance_control/src/: cartesian_impedance_controller.cpp  joint_impedance_controller.cpp
catkin_ws/src/realtime_humanlike_planning/: CMakeLists.txt  README.md  README_ENHANCED_CONTROL.md  README_INTEGRATION.md  README_USAGE.md  bashrc  debug_joint_states.py  enhanced_controller_manager.py  example_usage.py  iiwa_planning_interface.py  iiwa_planning_interface_enhanced.py  move_to_safe_position.py  package.xml  requirements.txt  safety_monitor.py  set_initial_config.py  setup_impedance_controller.py
catkin_ws/src/realtime_humanlike_planning/config/: iiwa_planning.rviz  planning_config.yaml
catkin_ws/src/realtime_humanlike_planning/launch/: iiwa_gazebo_custom_config.launch  iiwa_planning_enhanced_simulation.launch  iiwa_planning_real_robot.launch  iiwa_planning_simulation.launch
catkin_ws/src/realtime_humanlike_planning/parameters/dynamics/: kuka_lbr_iiwa7.py
catkin_ws/src/realtime_humanlike_planning/parameters/rewards/: van_hall_reward_3d.py
catkin_ws/src/realtime_humanlike_planning/parameters/tasks/: default_task_3d.py
catkin_ws/src/realtime_humanlike_planning/planning/core/: planner.py
catkin_ws/src/realtime_humanlike_planning/planning/costs/: __init__.py  cost_functions.py  post_solve_analysis.py  scaling.py
catkin_ws/src/realtime_humanlike_planning/planning/dynamics/: dynamics.py  kinematics.py
catkin_ws/src/realtime_humanlike_planning/planning/fitts/: fitts_law.py
catkin_ws/src/realtime_humanlike_planning/planning/solver/: bounds.py  solver_options.py
catkin_ws/src/realtime_humanlike_planning/planning/trajectory/: initial_trajectory.py
catkin_ws/src/realtime_humanlike_planning/scripts/: iiwa_planning_interface_wrapper.py  setup_network.sh  switch_controllers.py
catkin_ws/src/realtime_humanlike_planning/src/planning/: __init__.py
catkin_ws/src/realtime_humanlike_planning/src/planning/costs/: cost_functions.py  scaling.py
catkin_ws/src/realtime_humanlike_planning/src/planning/dynamics/: __init__.py  dynamics.py  kinematics.py
catkin_ws/src/realtime_humanlike_planning/src/planning/fitts/: __init__.py
catkin_ws/src/realtime_humanlike_planning/src/planning/solver/: __init__.py
catkin_ws/src/realtime_humanlike_planning/src/planning/trajectory/: __init__.py  initial_trajectory.py
parameters/rewards/: van_hall_reward_3d.py
parameters/tasks/: default_task_3d.py
src/planning/core/: __init__.py  planner.py
src/planning/solver/: bounds.py  solver_options.py
