<?xml version="1.0"?>
<package format="2">
  <name>realtime_humanlike_planning</name>
  <version>1.0.0</version>
  <description>Real-time human-like motion planning for robotic manipulation with IIWA integration</description>

  <maintainer email="user@example.com">User</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>controller_manager_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>actionlib</depend>
  <depend>actionlib_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>iiwa_impedance_control</depend>

  <export>
  </export>
</package>
