<?xml version="1.0"?>
<package format="2">
  <name>iiwa_impedance_control</name>
  <version>0.0.1</version>
  <description>The iiwa_impedance_control package</description>

  <author email="nicky.mol@tudelft.nl">Nicky Mol</author>
  <maintainer email="nicky.mol@tudelft.nl">Nicky Mol</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>kdl_parser</build_depend>
  <build_depend>controller_interface</build_depend>
  <build_depend>hardware_interface</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>urdf</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <exec_depend>actionlib</exec_depend>
  <exec_depend>actionlib_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>eigen</exec_depend>
  <exec_depend>kdl_parser</exec_depend>
  <exec_depend>controller_interface</exec_depend>
  <exec_depend>hardware_interface</exec_depend>
  <exec_depend>pluginlib</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>dynamic_reconfigure</exec_depend>
  <exec_depend>message_runtime</exec_depend>

  <export>
    <controller_interface plugin="${prefix}/iiwa_impedance_controller.xml"/>
  </export>
</package>
